force-app/main/default/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Cloudrop__Add_Campaign_Member_Job_Id__c</fullName>
        <label>Add Campaign Member Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Batch_End_Time__c</fullName>
        <label>Batch End Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Batch_Start_Time__c</fullName>
        <label>Batch Start Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Blocked_Rate__c</fullName>
        <formula>IF(Cloudrop__Processed__c != 0, (Cloudrop__Blocked__c /  Cloudrop__Processed__c ), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blocked Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Blocked__c</fullName>
        <label>Blocked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Bounce_Drops__c</fullName>
        <label>Bounce Drops</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Bounce_Rate__c</fullName>
        <formula>IF(Cloudrop__Processed__c != 0 ,(Cloudrop__Bounces__c/Cloudrop__Processed__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bounce Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Bounces__c</fullName>
        <label>Bounces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Click_Rate__c</fullName>
        <formula>IF(Cloudrop__Processed__c != 0, (Cloudrop__Clicks__c /  Cloudrop__Processed__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Click Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Clicks__c</fullName>
        <label>Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Deferred__c</fullName>
        <label>Deferred</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Delay_Send_Time__c</fullName>
        <label>Delay Send Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Delivered_Rate__c</fullName>
        <formula>IF(Cloudrop__Processed__c != 0, Cloudrop__Delivered__c /  Cloudrop__Processed__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivered Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Delivered__c</fullName>
        <label>Delivered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Drop_Rate__c</fullName>
        <formula>IF(Cloudrop__Processed__c != 0, (Cloudrop__Bounce_Drops__c +  Cloudrop__Spam_Drop__c)/ Cloudrop__Processed__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drop Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Email_Drip_Template_1__c</fullName>
        <label>Email Drip Template-1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Email_Drip_Template_2__c</fullName>
        <label>Email Drip Template-2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Email_Drip_Template_3__c</fullName>
        <label>Email Drip Template-3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloudrop__From_Email__c</fullName>
        <label>From Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Cloudrop__From_Name__c</fullName>
        <label>From Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloudrop__IP_Pool_Name__c</fullName>
        <label>IP Pool Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Invalid_Email__c</fullName>
        <label>Invalid Email</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Open_Rate__c</fullName>
        <formula>IF(Cloudrop__Processed__c != 0,   Cloudrop__Opens__c /  Cloudrop__Processed__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Opens__c</fullName>
        <label>Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Processed__c</fullName>
        <label>Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Repeat_Bounces__c</fullName>
        <label>Repeat Bounces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Repeat_Unsubscribes__c</fullName>
        <label>Unsubscribe drops</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Reply_To_Email__c</fullName>
        <label>Reply To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Requests__c</fullName>
        <label>Requests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Schedule_Date_Time__c</fullName>
        <label>Schedule Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Spam_Drop__c</fullName>
        <label>Spam Drop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Spam_Rate__c</fullName>
        <formula>IF( Cloudrop__Processed__c != 0 ,Cloudrop__Spam_Reports__c /  Cloudrop__Processed__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spam Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Spam_Reports__c</fullName>
        <label>Spam Reports</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Target_campaign_members__c</fullName>
        <label>Target campaign members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Template_Api_Name__c</fullName>
        <label>Template Api Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Unique_Click_Rate__c</fullName>
        <formula>IF(Cloudrop__Requests__c != 0, Cloudrop__Unique_Clicks__c / Cloudrop__Requests__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Click Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Unique_Clicks__c</fullName>
        <label>Unique Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Unique_Open_Rate__c</fullName>
        <formula>IF(Cloudrop__Requests__c != 0, Cloudrop__Unique_Opens__c / Cloudrop__Requests__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Open Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Unique_Opens__c</fullName>
        <label>Unique Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Unsubscribe_Rate__c</fullName>
        <formula>IF(Cloudrop__Processed__c != 0,( Cloudrop__Unsubscribes__c /  Cloudrop__Processed__c ), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unsubscribe Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Unsubscribes__c</fullName>
        <label>Unsubscribes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>